--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
       <h3 class="script-font">build a bee friendly garden in your browser</h3>
   </div>
   <hr>
-  <div class="row vertical-center">
-    <button type="button" class="btn btn-lg btn-warning center-block fader" id="learn">Learn Plants</button>
+  <section class="row vertical-center">
+<!--   optional learn more page -->
+ <!--    <button type="button" class="btn btn-lg btn-warning center-block fader" id="learn">Learn Plants</button> -->
     <button type="button" class="btn btn-lg btn-success center-block fader" id="startGame">Play Busy Bee!</button>
-  </div>
+  </section>
+  <section class="row" id="images-row">
+    <div class="col-md-4 img-circle" id="opt1">
+    </div>
+    <div class="col-md-4 img-circle">
+    </div>
+    <div class="col-md-4 img-circle">
+    </div>
+  </section>
 
 <!--   jQuery-->  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
