an image appears on the click

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <section class="row" id="images-row">
     <div class="col-md-4 img-circle" id="opt1">
     </div>
-    <div class="col-md-4 img-circle">
+    <div class="col-md-4 img-circle" id="opt2">
     </div>
-    <div class="col-md-4 img-circle">
+    <div class="col-md-4 img-circle" id="opt3">
     </div>
   </section>
 
