adds class beeDislike to an incorrect image

--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
       <h3 class="script-font">build a bee friendly garden in your browser</h3>
   </div>
   <hr>
+
   <section class="row vertical-center">
 <!--   optional learn more page -->
  <!--    <button type="button" class="btn btn-lg btn-warning center-block fader" id="learn">Learn Plants</button> -->
+
     <button type="button" class="btn btn-lg btn-success center-block fader" id="startGame">Play Busy Bee!</button>
   </section>
   <section class="row" id="images-row">
-    <div class="col-md-4 img-circle" id="opt1">
+    <div class="col-md-4 img-rounded response" id="opt1">
     </div>
-    <div class="col-md-4 img-circle" id="opt2">
+    <div class="col-md-4 img-rounded response" id="opt2">
     </div>
-    <div class="col-md-4 img-circle" id="opt3">
+    <div class="col-md-4 img-rounded response" id="opt3">
     </div>
   </section>
 
