--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -28,6 +29,9 @@
     </div>
     <div class="col-md-4 img-rounded response" id="opt3">
     </div>
+  </section>
+  <section class="row">
+    <p id="score"></p>
   </section>
 
 <!--   jQuery-->  
