--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <button type="button" class="btn btn-lg btn-success center-block fader" id="startGame">Play Busy Bee!</button>
   </section>
   <section class="row" id="images-row">
-    <div class="col-md-4 img-rounded response" id="opt1">
+    <div class="col-md-4 img-rounded img-responsive response" id="opt1">
     </div>
-    <div class="col-md-4 img-rounded response" id="opt2">
+    <div class="col-md-4 img-rounded img-responsive response" id="opt2">
     </div>
-    <div class="col-md-4 img-rounded response" id="opt3">
+    <div class="col-md-4 img-rounded img-responsive response" id="opt3">
     </div>
   </section>
   <section class="row">
-    <p id="score"></p>
+    <h3 id="scoreDisp"></3>
   </section>
 
 <!--   jQuery-->  
