--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Busy Bee</title>
   <link rel="shortcut icon" href="images/tab-bee.ico">
   <link href='https://fonts.googleapis.com/css?family=Cinzel:400,700|Chonburi' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="sweetalert-master/dist/sweetalert.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+
   <div class="row">
     <h1 class="script-font">Busy Bee</h1>
       <h3 class="script-font">build a bee friendly garden in your browser</h3>
@@ -18,20 +22,24 @@
 
   <section class="row vertical-center">
 <!--   optional learn more page -->
- <!--    <button type="button" class="btn btn-lg btn-warning center-block fader" id="learn">Learn Plants</button> -->
-
+    <button type="button" class="btn btn-lg btn-warning center-block fader" id="learn">Learn Plants</button>
     <button type="button" class="btn btn-lg btn-success center-block fader" id="startGame">Play Busy Bee!</button>
   </section>
-  <section class="row" id="images-row">
-    <div class="col-md-4 img-rounded img-responsive response" id="opt1">
+
+  <section class="row tocenter" id="images-row">
+    <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt1">
+      <p id="opt1-desc"></p>
     </div>
-    <div class="col-md-4 img-rounded img-responsive response" id="opt2">
+    <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt2">
+      <p id="opt2-desc"></p>
     </div>
-    <div class="col-md-4 img-rounded img-responsive response" id="opt3">
+    <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt3">
+      <p id="opt3-desc"></p>
     </div>
   </section>
+
   <section class="row">
-    <h3 id="scoreDisp"></3>
+    <h3 class="script-font" id="scoreDisp"></3>
   </section>
 
 <!--   jQuery-->  
@@ -39,7 +47,7 @@
 <!--   bootstrap -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <!--   sweetAlert -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert-dev.min.js"></script>
+  <script src="sweetalert-master/dist/sweetalert.min.js"></script> 
 <!--   javascript -->
    <script type="text/javascript" src="script.js"></script>
 </body>
