display desc of flowers

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
   <div class="row">
     <h1 class="script-font">Busy Bee</h1>
-      <h3 class="script-font">build a bee friendly garden in your browser</h3>
-  </div>
+<!--       <h3 class="script-font">build a bee friendly garden in your browser</h3>
+ -->  </div>
   <hr>
 
   <section class="row vertical-center">
 <!--   optional learn more page -->
-    <button type="button" class="btn btn-lg btn-warning center-block fader" id="learn">Learn Plants</button>
+<!--     <button type="button" class="btn btn-lg btn-warning center-block fader" id="learn">Learn Plants</button> -->
     <button type="button" class="btn btn-lg btn-success center-block fader" id="startGame">Play Busy Bee!</button>
   </section>
 
-  <section class="row tocenter" id="images-row">
+  <section class="row" id="images-row">
     <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt1">
       <p id="opt1-desc"></p>
     </div>
