two player function + displays score

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
 </head>
 <body>
-
+<container>
   <div class="row">
-    <h1 class="script-font">Busy Bee</h1>
+
+      <h1 class="script-font">Busy Bee</h1>
 <!--       <h3 class="script-font">build a bee friendly garden in your browser</h3>
  -->  </div>
   <hr>
@@ -39,8 +40,11 @@
   </section>
 
   <section class="row">
-    <h3 class="script-font" id="scoreDisp"></3>
+    <h3 class="script-font" id="scoreDisp"></h3>
+    <h3 class="col-md-offset-1 col-md-5" id="p1score"></h3>
+    <h3 class="col-md-5 col-md-offset-1" id="p2score"></h3>
   </section>
+</container>
 
 <!--   jQuery-->  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
