--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <section class="row vertical-center">
 <!--   optional learn more page -->
 <!--     <button type="button" class="btn btn-lg btn-warning center-block fader" id="learn">Learn Plants</button> -->
+    
     <button type="button" class="btn btn-lg btn-success center-block fader" id="startGame">Play Busy Bee!</button>
   </section>
 
@@ -39,7 +40,7 @@
     </div>
   </section>
 
-  <section class="row">
+  <section class="row scoreBox">
     <h3 class="script-font" id="scoreDisp"></h3>
     <h3 class="col-md-offset-1 col-md-5" id="p1score"></h3>
     <h3 class="col-md-5 col-md-offset-1" id="p2score"></h3>
