--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
   <section class="row vertical-center">
 <!--   optional learn more page -->
-<!--     <button type="button" class="btn btn-lg btn-warning center-block fader" id="learn">Learn Plants</button> -->
-    
+
+    <button type="button" class="btn btn-lg btn-failure center-block fader" id="learn">Bryce hates Benedict</button>
     <button type="button" class="btn btn-lg btn-success center-block fader" id="startGame">Play Busy Bee!</button>
   </section>
 
