--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
   <hr>
 
   <section class="row vertical-center">
-<!--   optional learn more page -->
-
-    <button type="button" class="btn btn-lg btn-failure center-block fader" id="learn">Bryce hates Benedict</button>
+<!-- categories-->    
+    <button type="button" class="btn btn-lg btn-failure center-block fader" id="benedict">Bryce hates Benedict</button>
     <button type="button" class="btn btn-lg btn-success center-block fader" id="startGame">Play Busy Bee!</button>
   </section>
 
