new arrays + bc images + separate functions

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
   <section class="row vertical-center">
 <!-- categories-->    
-    <button type="button" class="btn btn-lg btn-failure center-block fader" id="benedict">Bryce hates Benedict</button>
-    <button type="button" class="btn btn-lg btn-success center-block fader" id="startGame">Play Busy Bee!</button>
+    <button type="button" class="btn btn-lg btn-failure center-block fader" id="startBenedict">Bryce hates Benedict</button>
+    <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Play Busy Bee!</button>
   </section>
 
   <section class="row" id="images-row">
