player score starts out correctly

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 
       <h1 class="script-font">Busy Bee</h1>
 <!--       <h3 class="script-font">build a bee friendly garden in your browser</h3>
- -->  </div>
+ -->  
+  </div>
   <hr>
 
   <section class="row vertical-center">
+  
 <!-- categories-->    
     <button type="button" class="btn btn-lg btn-failure center-block fader" id="startBenedict">Bryce hates Benedict</button>
     <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Play Busy Bee!</button>
