--- a/index.html
+++ b/index.html
@@ -13,40 +13,41 @@
 
 </head>
 <body>
-<container class="container">
-  <div class="row">
+  <container class="container">
+    <div class="row">
 
-      <h1 class="script-font">Busy Bee</h1>
-<!--       <h3 class="script-font">build a bee friendly garden in your browser</h3>
- -->  
-  </div>
-  <hr>
-
-  <section class="row vertical-center">
-  
-<!-- categories-->    
-    <button type="button" class="btn btn-lg btn-failure center-block fader" id="startBenedict">Bryce hates Benedict</button>
-    <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Play Busy Bee!</button>
-  </section>
-
-  <section class="row" id="images-row">
-    <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt1">
-      <p id="opt1-desc"></p>
+        <h1 class="script-font">Busy Bee</h1>
+        <h3 class="script-font">build a bee friendly garden in your browser</h3>
+    
     </div>
-    <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt2">
-      <p id="opt2-desc"></p>
-    </div>
-    <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt3">
-      <p id="opt3-desc"></p>
-    </div>
-  </section>
+    <hr>
 
-  <section class="row scoreBox">
-    <h3 class="script-font" id="scoreDisp"></h3>
-    <h3 class="col-md-offset-1 col-md-5" id="p1score"></h3>
-    <h3 class="col-md-5 col-md-offset-1" id="p2score"></h3>
-  </section>
-</container>
+    <section class="row vertical-center">
+  <!-- categories-->    
+      <button type="button" class="btn btn-lg btn-failure center-block fader" id="startBenedict">Bryce hates Benedict</button>
+      <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Play Busy Bee!</button>
+    </section>
+
+    <section class="row" id="images-row">
+      <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt1">
+        <p id="opt1-desc"></p>
+      </div>
+      <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt2">
+        <p id="opt2-desc"></p>
+      </div>
+      <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt3">
+        <p id="opt3-desc"></p>
+      </div>
+    </section>
+
+    <section class="row md-col-offset-3 md-col-6 md-col-offset-3">
+      <div class="scoreBox">
+        <h3 class="script-font" id="scoreDisp"></h3>
+        <h3 class="col-md-offset-1 col-md-5" id="p1score"></h3>
+        <h3 class="col-md-5 col-md-offset-1" id="p2score"></h3>
+      </div>
+    </section>
+  </container>
 
 <!--   jQuery-->  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
