--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
     <section class="row">
       <div>
         <h1 class="script-font">Busy Bee</h1>
-        <h3 class="script-font">one of these three images are unfriendly to Bryce or Bees.</h3>
-        <h3 class="script-font">click the unfriendly item to earn points to 5 to win</h3>
       </div>
     </section>
     <hr>
+    <section class="row benInst initHide"> 
+      <div>
+        <h3 class="script-font">one of these three images are unfriendly to Bryce</h3>
+        <h3 class="script-font">earn 5 points to win!</h3>
+      </div>
+    </section>
+    <section class="row beeInst initHide"> 
+      <div>
+        <h3 class="script-font">one of these three images are unfriendly to bees</h3>
+        <h3 class="script-font">earn 5 points to win!</h3>
+      </div>
+    </section>
 
     <section class="row col-md-offset-3 col-md-6 col-md-offset-3 vertical-center">
   <!-- categories-->    
@@ -42,8 +52,7 @@
 
     <section class="row md-col-offset-3 md-col-6 md-col-offset-3">
       <div class="scoreBox initHide">
-<!--         <h3 class="script-font" id="scoreDisp"></h3>
- -->    <h3 class="col-md-offset-1 col-md-5" id="p1score"></h3>
+        <h3 class="col-md-offset-1 col-md-5" id="p1score"></h3>
         <h3 class="col-md-5 col-md-offset-1" id="p2score"></h3>
       </div>
     </section>
