fixed bug with BHB mode

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       </div>
     </section>
     <hr>
-    <section class="row benInst initHide"> 
+    <section class="row initHide" id="benInst"> 
       <div>
         <h3 class="script-font">one of these three images are unfriendly to Bryce</h3>
         <h3 class="script-font">earn 5 points to win!</h3>
       </div>
     </section>
-    <section class="row beeInst initHide"> 
+    <section class="row initHide" id="beeInst"> 
       <div>
         <h3 class="script-font">one of these three images are unfriendly to bees</h3>
         <h3 class="script-font">earn 5 points to win!</h3>
