--- a/index.html
+++ b/index.html
@@ -12,51 +12,53 @@
 </head>
 
 <body>
-  <container class="container">
-    <section class="row">
-      <div>
-        <h1 class="script-font">Busy Bee</h1>
+  <div class="container">
+      <div class="col-md-9 initHide" id="images-row">
+        <div class="img-rounded img-responsive response" id="opt1">
+          <p id="opt1-desc"></p>
+        </div>
+        <div class="img-rounded img-responsive response" id="opt2">
+          <p id="opt2-desc"></p>
+        </div>
+        <div class="img-rounded img-responsive response" id="opt3">
+          <p id="opt3-desc"></p>
+        </div>
+        <div class="img-rounded img-responsive response" id="opt4">
+          <p id="opt4-desc"></p>
+        </div>
       </div>
-    </section>
-    <hr>
-    <section class="row initHide" id="benInst"> 
-      <div>
-        <h3 class="script-font">one of these three images are unfriendly to Bryce</h3>
-        <h3 class="script-font">earn 5 points to win!</h3>
-      </div>
-    </section>
-    <section class="row initHide" id="beeInst"> 
-      <div>
-        <h3 class="script-font">one of these three images are unfriendly to bees</h3>
-        <h3 class="script-font">earn 5 points to win!</h3>
-      </div>
-    </section>
+      <div class="col-md-3 right">
+        <header>
+            <img src="images/bee.png" id="beepic">
+            <h1 class="script-font">Busy Bee</h1>
+        </header>
+        <hr>
+        <div class="row initHide" id="benInst"> 
+          <div>
+            <h3 class="script-font">one of these three images are unfriendly to Bryce</h3>
+            <h3 class="script-font">earn 5 points to win!</h3>
+          </div>
+        </div>
+        <div class="row initHide" id="beeInst"> 
+          <div>
+            <h3 class="script-font">one of these three images are unfriendly to bees</h3>
+            <h3 class="script-font">earn 5 points to win!</h3>
+          </div>
+          <hr>
+        </div>
+    <!-- categories--> 
+        <div class="script-font fader">
+          <h3>click a button below to get started!</h3>
+        </div>   
+        <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Busy Bee!</button>
+        <button type="button" class="btn btn-lg btn-info center-block fader" id="startBenedict">Bryce hates Benedict</button>
 
-    <section class="row col-md-offset-3 col-md-6 col-md-offset-3 vertical-center">
-  <!-- categories-->    
-      <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Busy Bee!</button>
-      <button type="button" class="btn btn-lg btn-failure center-block fader" id="startBenedict">Bryce hates Benedict</button>
-    </section>
-
-    <section class="row initHide" id="images-row">
-      <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt1">
-        <p id="opt1-desc"></p>
+      <div  class="scoreBox initHide">
+          <h3 class="" id="p1score"></h3>
+          <h3 class="" id="p2score"></h3>
       </div>
-      <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt2">
-        <p id="opt2-desc"></p>
-      </div>
-      <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt3">
-        <p id="opt3-desc"></p>
-      </div>
-    </section>
-
-    <section class="row md-col-offset-3 md-col-6 md-col-offset-3">
-      <div class="scoreBox initHide">
-        <h3 class="col-md-offset-1 col-md-5" id="p1score"></h3>
-        <h3 class="col-md-5 col-md-offset-1" id="p2score"></h3>
-      </div>
-    </section>
-  </container>
+    </div>
+  </div>
 
 <!--   jQuery-->  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
