--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
 
 <body>
   <div class="container">
-      <div class="col-md-9 initHide" id="images-row">
-        <div class="img-rounded img-responsive response" id="opt1">
-          <p id="opt1-desc"></p>
+      <div class="col-md-8 initHide left" id="images-row">
+        <div class="row-fluid">
+          <div class="img-rounded img-responsive response span4" id="opt1">
+            <p id="opt1-desc"></p>
+          </div>
+          <div class="img-rounded img-responsive response span4" id="opt2">
+            <p id="opt2-desc"></p>
+          </div>
         </div>
-        <div class="img-rounded img-responsive response" id="opt2">
-          <p id="opt2-desc"></p>
-        </div>
-        <div class="img-rounded img-responsive response" id="opt3">
-          <p id="opt3-desc"></p>
-        </div>
-        <div class="img-rounded img-responsive response" id="opt4">
-          <p id="opt4-desc"></p>
+        <div class="row-fluid">
+          <div class="img-rounded img-responsive response span4" id="opt3">
+            <p id="opt3-desc"></p>
+          </div>
+          <div class="img-rounded img-responsive response span4" id="opt4">
+            <p id="opt4-desc"></p>
+          </div>
         </div>
       </div>
-      <div class="col-md-3 right">
+      <div class="col-md-4 right">
         <header>
             <img src="images/bee.png" id="beepic">
             <h1 class="script-font">Busy Bee</h1>
