--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <container class="container">
-    <section class="row">
+    <section class="row header">
       <div>
         <h1 class="script-font">Busy Bee</h1>
       </div>
