styling and css changes

--- a/index.html
+++ b/index.html
@@ -17,27 +17,32 @@
     <div class="row">
 
         <h1 class="script-font">Busy Bee</h1>
-        <h3 class="script-font">build a bee friendly garden in your browser</h3>
+        <h3 class="script-font">learn bee friendly plants</h3>
     
     </div>
     <hr>
 
-    <section class="row vertical-center">
-  <!-- categories-->    
-      <button type="button" class="btn btn-lg btn-failure center-block fader" id="startBenedict">Bryce hates Benedict</button>
-      <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Play Busy Bee!</button>
+<!-- categories-->  
+    <section class="pushdown">  
+      <div class="col-sm-6 col-sm-offset-3 col-md-6 col-lg-6 col-md-offset-3 col-lg
+      -offset-3">
+        <button type="button" class="btn btn-lg btn-failure center-block fader" id="startBenedict">Bryce hates Benedict</button>
+        <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Play Busy Bee!</button>
+      </div>
     </section>
 
-    <section class="row" id="images-row">
-      <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt1">
-        <p id="opt1-desc"></p>
-      </div>
-      <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt2">
-        <p id="opt2-desc"></p>
-      </div>
-      <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt3">
-        <p id="opt3-desc"></p>
-      </div>
+    <section class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+      <section class="row" id="images-row">
+        <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt1">
+          <p id="opt1-desc"></p>
+        </div>
+        <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt2">
+          <p id="opt2-desc"></p>
+        </div>
+        <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt3">
+          <p id="opt3-desc"></p>
+        </div>
+      </section>
     </section>
 
     <section class="row md-col-offset-3 md-col-6 md-col-offset-3">
