--- a/index.html
+++ b/index.html
@@ -13,38 +13,31 @@
 
 </head>
 <body>
-  <container class="container">
+  <!-- top -->
+  <div class="container">
     <div class="row">
-
-        <h1 class="script-font">Busy Bee</h1>
-        <h3 class="script-font">learn bee friendly plants</h3>
-    
+      <h1 class="script-font">Busy Bee</h1>
+      <h3 class="script-font">learn bee friendly plants</h3>
     </div>
     <hr>
+  </div>
 
-<!-- categories-->  
-    <section class="pushdown">  
-      <div class="col-sm-6 col-sm-offset-3 col-md-6 col-lg-6 col-md-offset-3 col-lg
-      -offset-3">
-        <button type="button" class="btn btn-lg btn-failure center-block fader" id="startBenedict">Bryce hates Benedict</button>
-        <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Play Busy Bee!</button>
-      </div>
-    </section>
-
+   <!-- row of images -->
     <section class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
       <section class="row" id="images-row">
-        <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt1">
+        <div class="col-md-4 col-lg-4 col-s-12 col-xs-12 img-rounded img-responsive response" id="opt1">
           <p id="opt1-desc"></p>
         </div>
-        <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt2">
+        <div class="col-md-4 col-lg-4 col-s-12 col-xs-12 img-rounded img-responsive response" id="opt2">
           <p id="opt2-desc"></p>
         </div>
-        <div class="col-md-4 col-s-12 img-rounded img-responsive response" id="opt3">
+        <div class="col-md-4 col-lg-4 col-s-12 col-xs-12 img-rounded img-responsive response" id="opt3">
           <p id="opt3-desc"></p>
         </div>
       </section>
     </section>
 
+    <!-- scores -->
     <section class="row md-col-offset-3 md-col-6 md-col-offset-3">
       <div class="scoreBox">
         <h3 class="script-font" id="scoreDisp"></h3>
@@ -52,7 +45,14 @@
         <h3 class="col-md-5 col-md-offset-1" id="p2score"></h3>
       </div>
     </section>
-  </container>
+
+  <!-- categories-->  
+    <section class="pushdown">  
+      <div class="col-sm-6 col-sm-offset-3 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3">
+        <button type="button" class="btn btn-lg btn-failure center-block fader" id="startBenedict">Bryce hates Benedict</button>
+        <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Play Busy Bee!</button>
+      </div>
+    </section>
 
 <!--   jQuery-->  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
