--- a/index.html
+++ b/index.html
@@ -25,24 +25,26 @@
    <!-- row of images -->
     <section class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
       <section class="row" id="images-row">
-        <div class="col-md-4 col-lg-4 col-s-12 col-xs-12 img-rounded img-responsive response" id="opt1">
+        <div class="col-md-4 col-lg-4 col-s-4 col-xs-12 img-rounded img-responsive response" id="opt1">
           <p id="opt1-desc"></p>
         </div>
-        <div class="col-md-4 col-lg-4 col-s-12 col-xs-12 img-rounded img-responsive response" id="opt2">
+        <div class="col-md-4 col-lg-4 col-s-4 col-xs-12 img-rounded img-responsive response" id="opt2">
           <p id="opt2-desc"></p>
         </div>
-        <div class="col-md-4 col-lg-4 col-s-12 col-xs-12 img-rounded img-responsive response" id="opt3">
+        <div class="col-md-4 col-lg-4 col-s-4 col-xs-12 img-rounded img-responsive response" id="opt3">
           <p id="opt3-desc"></p>
         </div>
       </section>
     </section>
 
     <!-- scores -->
-    <section class="row md-col-offset-3 md-col-6 md-col-offset-3">
+    <section class="row col-lg-offset-3 col-lg-6 col-lg-offset-3
+                        col-md-offset-3 col-md-6 col-md-offset-3
+                        col-sm-offset-3 col-sm-6 col-sm-offset-3">
       <div class="scoreBox">
         <h3 class="script-font" id="scoreDisp"></h3>
-        <h3 class="col-md-offset-1 col-md-5" id="p1score"></h3>
-        <h3 class="col-md-5 col-md-offset-1" id="p2score"></h3>
+        <h3 id="p1score"></h3>
+        <h3 id="p2score"></h3>
       </div>
     </section>
 
