--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row">
       <h1 class="script-font">Busy Bee</h1>
-      <h3 class="script-font">learn bee friendly plants</h3>
+      <h3 class="script-font">learn bee friendly plants!</h3>
     </div>
     <hr>
   </div>
@@ -51,8 +51,8 @@
   <!-- categories-->  
     <section class="pushdown">  
       <div class="col-sm-6 col-sm-offset-3 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3">
-        <button type="button" class="btn btn-lg btn-failure center-block fader" id="startBenedict">Bryce hates Benedict</button>
-        <button type="button" class="btn btn-lg btn-success center-block fader" id="startBee">Play Busy Bee!</button>
+        <button type="button" class="btn btn-lg busybee center-block fader" id="startBee">Play Busy Bee!</button>
+        <button type="button" class="btn btn-lg brycehates center-block fader" id="startBenedict">Bryce hates Benedict</button>
       </div>
     </section>
 
