--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <!-- categories-->  
     <section class="pushdown">  
       <div class="col-sm-6 col-sm-offset-3 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3">
-        <button type="button" class="btn btn-lg busybee center-block fader" id="startBee">Play Busy Bee!</button>
-        <button type="button" class="btn btn-lg brycehates center-block fader" id="startBenedict">Bryce hates Benedict</button>
+        <button type="button" class="shadow btn btn-lg busybee center-block fader" id="startBee">Play Busy Bee!</button>
+        <button type="button" class="shadow btn btn-lg brycehates center-block fader" id="startBenedict">Bryce hates Benedict</button>
       </div>
     </section>
 
