--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </div>
 
    <!-- row of images -->
-    <section class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
-      <section class="row" id="images-row">
+    <section class="row" id="images-row">
+      <section class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
         <div class="col-md-4 col-lg-4 col-s-4 col-xs-12 img-rounded img-responsive response" id="opt1">
           <p id="opt1-desc"></p>
         </div>
@@ -53,6 +53,13 @@
         <button type="button" class="shadow btn btn-lg brycehates center-block fader" id="startBenedict">Bryce Hates Benedict</button>
       </div>
     </section>
+
+
+    <!-- footer -->
+    <footer>
+      <hr>
+      <p class="bump">a game by <a href="github.com/brytree">bryce bortree</a>.<p>
+    </footer>
 
 <!--   jQuery-->  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
